--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -60,6 +60,8 @@ chisq.test(table1)
 chisqtestGC(table1)
 fisher.test(table1)
 ```
+T his 
+text (Fisher test shows the odds ratio being 1.5439 which indicates the times you are likely to get aids while taking the drug)
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 
