--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -55,13 +55,15 @@ This data shows us that the percent of people that contracted aids while taking 
 
 ## Inferential Results
 
+<!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
+
 ```{r}
 chisq.test(table1)
 chisqtestGC(table1)
 fisher.test(table1)
 ```
-This text (Fisher test shows the odds ratio being 1.5439 which indicates the times you are likely to get aids while taking the drug)
-<!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
+This text (Fisher test shows the odds ratio being 1.5439 which indicates the times you are likely to get aids 
+while taking the drug)
 
 
 # Discussion and Conclusion
